- Set up the CSS for the analytics figures (ensured the figures used appropriate spacing and positioned the close button correctly). - Refactored the project template into an object-oriented class, making it more organized and readable compared to the Kanban.js file. Set up event listeners and DOM element variables using TypeScript. - Updated `project_template.ejs` to use buttons (instead of submit buttons) for opening the analytics figures, adding them as partials. - Created the three analytics figure partial EJS files. figures Adding them in as partials. - Created the three analytics figures partial ejs's.

--- a/public/css/project_template.css
+++ b/public/css/project_template.css
@@ -127,3 +127,8 @@
   display: flex;
   justify-items: left;
 }
+#cfdSection, #tagSection,#burnupSection{
+  display: none;
+  flex: 2 0 0rem;
+  position:relative;
+}
